tests/type_errors/type_arity_mismatch.sy
mod A

enum A a = A { field: a }

def q : forall a. A -> Str : A:A { field } = field

def main : Str := q ' A:A { field: 1 }

--+ expected exit status: 1
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Str
--+ ----
--+ t28
--+ 
--+ tests/type_errors/type_arity_mismatch.sy
--+   5| def q : forall a. A -> Str : A:A { field } = field
--+   6| 
--+   7| def main : Str := q ' A:A { field: 1 }
--+ 
--+ > Failed to merge types.
--+ 
--+ t43
--+ ----
--+ A ERROR
--+ 
--+ tests/type_errors/type_arity_mismatch.sy
--+   7| def main : Str := q ' A:A { field: 1 }
--+                          ^
--+ > Failed to resolve this type - it is still unknown. Got _ instead.
--+ 
--+ PREAMBLE
--+  71|   : f a = f a
--+            ^

